[tool.poetry]
name = "pytorch-examples"
version = "0.1.0"
description = ""
authors = ["mokarakaya <mokarakaya@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.9"
torch = "==1.12.0"
torchvision = "==0.13.0"
pandas = "==1.4.3"
transformers = "==4.20.1"
datasets = "==2.3.2"
torchtext = "==0.13.0"
torchdata = "==0.4.0"
seqeval ="==1.2.2"
black = "==22.6.0"
captum = "==0.5.0"
sentence-transformers = "==2.2.2"

[tool.poetry.dev-dependencies]
pytest = "==5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
